# ProyectoCalculo

./: .gitignore  CMakeLists.txt  README.md  main.c
inc/: CMath.h  Player.h  Utils.h
src/: Player.c  Utils.c
